tests/snapshots/run_wpt_conformance__trtx_abs_int64_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "abs.https.any.js",
    "abs int64 4D tensor",
    "trtx",
    "PASS",
)
